--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div itemprop='name' >drdfajardo18</div>
             <div itemscope itemtype='http://schema.org/Organization'><span itemprop='name'>Fiverr</span></div>
             <div itemprop='jobtitle'>Seller</div>
-            <div itemprop='description'>I program for a living like any other programmer. In my free time, I like to relax and spend time with my family. I love what I do and I love serving other. I am currently in college planning to graudate in 2018.</div>
+            <div itemprop='description'>I program for a living like any other programmer. In my free time, I like to relax and spend time with my family. I love what I do and I love serving other. I am currently in college planning to graduate in 2018.</div>
         </div>
     </a>
 </div>
@@ -143,7 +143,7 @@
                 <h4 style="margin-left:40px;"><strong>
                     <u>My Webpage</u>
                     </strong></h4>
-                <p style="margin-left:50px;">One of my biggest project for me as a begginger developer is this webpage. This is my first real website I wrote outsite of school.</p>
+                <p style="margin-left:50px;">One of my biggest project for me as a beginner developer is this webpage. This is my first real website I wrote outsite of school.</p>
                 </div>
             <div class="column">
                 <img src="soccer_img.jpg" style="width:100%; margin-left: 30px;" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
