--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     <div id="section3" class="space2 container-fluid">
         <h1>Contact Me</h1>
         <hr stroke="white">
-        <h4>If you have any guestion feel free to contact me.</h4>
+        <h4>If you have any question feel free to contact me.</h4>
         <div class="container1">
             <form action="action_page.php" method="post" enctype="multipart/form-data">
                     <br>
